--- a/preamble.tex
+++ b/preamble.tex
@@ -33,10 +33,11 @@
 
 \DefineBibliographyStrings{english}{bibliography={References}}
 
-\usetikzlibrary{decorations,arrows.meta,bending,calc}
+\usetikzlibrary{decorations,arrows.meta,bending,calc,decorations.pathreplacing}
 \colorlet{rex}{magenta}
 \colorlet{gax}{gray!50}
 \colorlet{orx}{orange!90!yellow!95!black!90}
+\colorlet{blx}{cyan}
 
 \sisetup{range-phrase=-,range-units=single}
 \DeclareSIUnit{\calorie}{cal}
