Lab Prof Office Hours 1

--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -807,5 +807,15 @@
 
 
 
+\section{Office Hours (Keller)}
+\begin{itemize}
+    \item \marginnote{1/28:}How do we read the chart below the IR spectrum?
+    \begin{itemize}
+        \item The big numbers are wavenumbers, and the little numbers are the percent transmittance (smaller percent transmittance means bigger peak).
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
