--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -817,5 +817,49 @@
 
 
 
+\section{Chapter 10: Radical Reactions}
+\emph{From \textcite{bib:SolomonsEtAl}.}
+\begin{itemize}
+    \item \marginnote{1/29:}Homolytically breaking the \ce{O-O} bond in a dialkyl peroxide (\ce{ROOR}) leads to the formation of two \textbf{alkoxyl radicals}.
+    \item \textbf{Homolytic bond dissociation energy}: The energy required to break a covalent bond homolytically. \emph{Denoted by} $\bm{DH^\circ}$.
+    \begin{itemize}
+        \item Breaking \ce{C-H} bonds with lower $DH^\circ$'s leads to more stable radicals.
+    \end{itemize}
+    \item Unselectivity of chlorination of alkanes.
+    \begin{figure}[h!]
+        \centering
+        \footnotesize
+        \schemestart
+            \chemname[2em]{\chemfig{-[:30](-[2])-[:-30]}}{Isobutane\\}
+            \arrow(.43--.173){->[\ce{Cl2}][$h\nu$]}
+            \chemname[2em]{\chemfig{-[:30](-[2])-[:-30]-[:30]Cl}}{Isobutyl chloride\\(48\%)}
+            \+{2em,2em,1.3em}
+            \chemname[2em]{\chemfig{-[:30](-[:70]Cl)(-[:110])-[:-30]}}{$t$-Butyl chloride\\(29\%)}
+            \+
+            \chemname[2em]{\shortstack{Polychlorinated\\products}}{{\color{white}hi}\\(23\%)}
+            \+
+            \chemname[2em]{\shortstack{HCl\\{\color{white}hi}}}{{\color{white}hi}\\{\color{white}hi}}
+        \schemestop
+        \caption{Unselectivity of chlorination of alkanes.}
+        \label{fig:chlorinationUnselective}
+    \end{figure}
+    \begin{itemize}
+        \item You want homotopic hydrogens to run chlorination of alkanes.
+    \end{itemize}
+    \item All termination steps from Honors Organic Chemistry (including dimerizing the alkyl reactants) are discussed here.
+    \item Note that you can run fluorination of alkanes, but it is even less selective than chlorination.
+    \begin{itemize}
+        \item In other words, the distribution of products very closely mirrors the ratio of types of homotopic hydrogens (i.e., radical stability is essentially irrelevant to predicting products).
+    \end{itemize}
+    % \item "When achiral molecules react to produce a compound with a single tetrahedral chirality center, the product will be a racemic form" \parencite[462]{bib:SolomonsEtAl}.
+    % \item Chiral molecules, on the other hand, produce diastereomers as products when a secondary chiral center is formed.
+    % \begin{itemize}
+    %     \item It is not easy to predict which diastereomer is the major product, though.
+    % \end{itemize}
+    \item Vinylic radicals are even less stable than primary radicals.
+\end{itemize}
+
+
+
 
 \end{document}
