--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -861,5 +861,17 @@
 
 
 
+\section{Chapter 13: Conjugated Unsaturated Systems}
+\emph{From \textcite{bib:SolomonsEtAl}.}
+\begin{itemize}
+    \item Covers 1,4-addition (esp. of hydrobromination).
+    \item Covers kinetic/thermodynamic control.
+    \item \textbf{Pericyclic} (reaction): A concerted reaction that proceeds through a cyclic transition state in which symmetry characteristics of molecular orbitals control the course of the reaction.
+    \item There are also [$2+2$] cycloadditions that require light energy.
+    \item "Cyclopentadiene is so reactive, in fact, that on standing at room temperature it slowly undergoes a Diels-Alder reaction with itself" \parencite[602]{bib:SolomonsEtAl}.
+\end{itemize}
+
+
+
 
 \end{document}
