TA Office Hours 1

--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -827,19 +827,40 @@
     \begin{itemize}
         \item Even if you have a strong EDG, if sterics prevents your diene from achieving the s-cis conformation, the reaction will be very slow and/or not proceed.
     \end{itemize}
-    \item E1 2020, 3b: Distinction between carbons 3 and 6?
-    \item E1 2020, 4: Ordering of the last 2/3 steps? Shouldn't we take advantage of the allylic stability to make the process even more selective before hydrogenating?
-    \item PSet 2, 1e: Is there reactivity with the alkene that's not next to the EWG in the dienophile?
     \item PSet 2, 1f: Why is $t$-BuOH listed?
     \begin{itemize}
         \item We need the Zaitsev product here; we ignore the bulky base --- it's just used to favor E2 over S\textsubscript{N}2.
     \end{itemize}
-    \item PSet 2, 4(i): Is the diene too unreactive?
     \item PSet 2, 5b: ?
     \begin{itemize}
         \item Think Diels-Alder here with the given SM as the dienophile and then ozonolysis.
     \end{itemize}
+\end{itemize}
+
+
+
+\section{Office Hours (Salinas)}
+\begin{itemize}
+    \item E1 2020, 3b: Distinction between carbons 3 and 6?
+    \begin{itemize}
+        \item 3 is shifted higher because it's next to two functional groups, whereas 6 is only next to one functional group.
+    \end{itemize}
+    \item E1 2020, 4: Ordering of the last 2/3 steps? Shouldn't we take advantage of the allylic stability to make the process even more selective before hydrogenating?
+    \begin{itemize}
+        \item Both are right.
+    \end{itemize}
+    \item PSet 2, 1e: Is there reactivity with the alkene that's not next to the EWG in the dienophile?
+    \begin{itemize}
+        \item Not enough reactivity to care about.
+    \end{itemize}
+    \item PSet 2, 4(i): Is the diene too unreactive?
+    \begin{itemize}
+        \item Yes
+    \end{itemize}
     \item PSet 2, 6: Are we using benzoyl peroxide to pull the bromine off the starting material and leave a radical behind at that site? A radical which we can either quench with \ce{H*} or wind back around to form a ring and then quench?
+    \begin{itemize}
+        \item Yes.
+    \end{itemize}
 \end{itemize}
 
 
